--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URL=mongodb+srv://krissyweber18:Y4eObPkRDSVB7pQC@cluster0.mbfyaey.mongodb.net/Node-API?retryWrites=true&w=majority
+MONGO_URL=
 PORT=3000
