--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
+NODE_ENV=development
 MONGO_URL=mongodb+srv://krissyweber18:Y4eObPkRDSVB7pQC@cluster0.mbfyaey.mongodb.net/Node-API?retryWrites=true&w=majority
 PORT=3000
+FRONTEND=http://127.0.0.1:5173
